# address-converter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/application/: service.rs
src/application/dto/: french_address.rs  iso_address.rs
src/domain/: address.rs  address_conversion.rs  french_address.rs  iso20022_address.rs  mod.rs  repositories.rs
src/infrastructure/: in_memory_repository.rs  json_repository.rs  mod.rs  pg_repository.rs
src/presentation/api/: mod.rs
src/presentation/cli/: commands.rs  mod.rs
tests/: lib.rs
