[package]
name = "address_converter"
version = "0.1.0"
edition = "2021"
authors = ["theredifh <juliandidier@protonmail.com>"]

description = "CLI tool to manage and convert French postal addresses and ISO 20022 format addresses."
license = "MIT OR Apache-2.0"
repository = "https://github.com/theredfish/address_converter"

[features]
cli = ["clap"]
api = [] # API support could be enabled and activate axum for example

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"], optional = true}
uuid = { version = "1.15.1", features = ["v4", "serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
regex = "1.11.1"
once_cell = "1.20.3"

[dev-dependencies]

[[bin]]
name = "cli"
path = "bin/cli.rs"
required-features = ["cli"]

[[bin]]
name = "api"
path = "bin/api.rs"
required-features = ["api"]

[lib]
name = "address_converter"
path = "src/lib.rs"
